--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/Users/tku137/dotfiles/alacritty/.config/alacritty/catppuccin"]
-	path = /Users/tku137/dotfiles/alacritty/.config/alacritty/catppuccin
+[submodule "alacritty/.config/alacritty/catppuccin"]
+	path = alacritty/.config/alacritty/catppuccin
 	url = https://github.com/catppuccin/alacritty.git
