--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ Thumbs.db
 ######################
 *.log
 *.sqlite
+
+# tmux plugins
+##############
+tmux/.config/tmux/plugins/tmux-sensible/
+tmux/.config/tmux/plugins/tmux-resurrect/
+tmux/.config/tmux/plugins/tmux.nvim/
+tmux/.config/tmux/plugins/tmux/
