--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "alacritty/.config/alacritty/catppuccin"]
 	path = alacritty/.config/alacritty/catppuccin
 	url = https://github.com/catppuccin/alacritty.git
+[submodule "tmux/.config/tmux/plugins/tpm"]
+	path = tmux/.config/tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
