--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -92,3 +92,27 @@ focus_follows_mouse yes
 # map ctrl+shift+z toggle_layout tall
 # map ctrl+alt+t goto_layout tall
 # map ctrl+alt+s goto_layout stack
+
+
+
+# Tab bar
+# tab bar place, top or bottom
+tab_bar_edge top
+
+#: The margin to the left and right of the tab bar (in pts).
+# tab_bar_margin_width 0.0
+
+#: The margin above and below the tab bar (in pts). The first number
+#: is the margin between the edge of the OS Window and the tab bar.
+#: The second number is the margin between the tab bar and the
+#: contents of the current tab.
+# tab_bar_margin_height 0.0 0.0
+
+#: fade, slant, separator, powerline, custom, hidden
+tab_bar_style separator
+
+tab_bar_align left
+
+tab_separator " ┇ "
+
+
