--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@ include ./themes/macchiato.conf
 
 
 # Fonts
-font_family      FiraCode Nerd Font Mono
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
