kitty: adjust font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,12 +4,12 @@ include ./themes/macchiato.conf
 
 
 # Fonts
-font_family      FiraCode Nerd Font
+font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 14.0
+font_size 15.0
 
 # Window layout
 # remember_window_size  yes
