iterm2: improve integration

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ tmux/.config/tmux/plugins/tmux-sensible/
 tmux/.config/tmux/plugins/tmux-resurrect/
 tmux/.config/tmux/plugins/tmux.nvim/
 tmux/.config/tmux/plugins/tmux/
+iterm2/.config/iterm2/AppSupport
