--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,5 +1,3 @@
-command_timeout = 2000
-
 [aws]
 symbol = "  "
 
@@ -12,6 +10,9 @@ symbol = " "
 [conda]
 symbol = " "
 
+[crystal]
+symbol = " "
+
 [dart]
 symbol = " "
 
@@ -22,13 +23,19 @@ read_only = " 󰌾"
 symbol = " "
 
 [elixir]
-symbol = " "
+symbol = " "
 
 [elm]
 symbol = " "
 
+[fennel]
+symbol = " "
+
 [fossil_branch]
 symbol = " "
+
+[gcloud]
+disabled = true
 
 [git_branch]
 symbol = " "
@@ -43,7 +50,7 @@ symbol = " "
 symbol = " "
 
 [haxe]
-symbol = "⌘ "
+symbol = " "
 
 [hg_branch]
 symbol = " "
@@ -56,6 +63,9 @@ symbol = " "
 
 [julia]
 symbol = " "
+
+[kotlin]
+symbol = " "
 
 [lua]
 symbol = " "
@@ -75,8 +85,8 @@ symbol = " "
 [nodejs]
 symbol = " "
 
-[os]
-# disabled = false
+[ocaml]
+symbol = " "
 
 [os.symbols]
 Alpaquita = " "
@@ -121,16 +131,26 @@ Windows = "󰍲 "
 
 [package]
 symbol = "󰏗 "
-# Disable the package module, hiding it from the prompt completely
-disabled = true
+
+[perl]
+symbol = " "
+
+[php]
+symbol = " "
 
 [pijul_channel]
-symbol = "🪺 "
+symbol = " "
 
 [python]
 symbol = " "
 # format = 'via [${symbol}${pyenv_prefix}(\($virtualenv\) )]($style)'
-python_binary = ['./venv/bin/python', 'python', 'python3', 'python2']
+python_binary = [
+  './venv/bin/python',
+  './.venv/bin/python',
+  'python',
+  'python3',
+  'python2',
+]
 
 [rlang]
 symbol = "󰟔 "
@@ -144,8 +164,11 @@ symbol = " "
 [scala]
 symbol = " "
 
-[spack]
-symbol = "🅢 "
+[swift]
+symbol = " "
+
+[zig]
+symbol = " "
 
 [custom.git_scope]
 disabled = true
