--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,9 +5,7 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'aserowy/tmux.nvim'
 set -g @plugin 'catppuccin/tmux'
-#set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
 set -g @catppuccin_flavour 'macchiato' # latte, frappe, macchiato, mocha
 
@@ -17,24 +15,34 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/aserowy/tmux.nvim
-# navigation
-set -g @tmux-nvim-navigation true
-set -g @tmux-nvim-navigation-cycle true
-set -g @tmux-nvim-navigation-keybinding-left 'C-h' 
-set -g @tmux-nvim-navigation-keybinding-down 'C-j' 
-set -g @tmux-nvim-navigation-keybinding-up 'C-k' 
-set -g @tmux-nvim-navigation-keybinding-right 'C-l' 
+# '@pane-is-vim' is a pane-local option that is set by the plugin on load,
+# and unset when Neovim exits or suspends; note that this means you'll probably
+# not want to lazy-load smart-splits.nvim, as the variable won't be set until
+# the plugin is loaded
 
-# resize
-set -g @tmux-nvim-resize true
-set -g @tmux-nvim-resize-step-x 1
-set -g @tmux-nvim-resize-step-y 1
-set -g @tmux-nvim-resize-keybinding-left 'M-h' 
-set -g @tmux-nvim-resize-keybinding-down 'M-j' 
-set -g @tmux-nvim-resize-keybinding-up 'M-k' 
-set -g @tmux-nvim-resize-keybinding-right 'M-l' 
+# Smart pane switching with awareness of Neovim splits.
+bind-key -n C-h if -F "#{@pane-is-vim}" 'send-keys C-h'  'select-pane -L'
+bind-key -n C-j if -F "#{@pane-is-vim}" 'send-keys C-j'  'select-pane -D'
+bind-key -n C-k if -F "#{@pane-is-vim}" 'send-keys C-k'  'select-pane -U'
+bind-key -n C-l if -F "#{@pane-is-vim}" 'send-keys C-l'  'select-pane -R'
+
+# Smart pane resizing with awareness of Neovim splits.
+bind-key -n M-h if -F "#{@pane-is-vim}" 'send-keys M-h' 'resize-pane -L 3'
+bind-key -n M-j if -F "#{@pane-is-vim}" 'send-keys M-j' 'resize-pane -D 3'
+bind-key -n M-k if -F "#{@pane-is-vim}" 'send-keys M-k' 'resize-pane -U 3'
+bind-key -n M-l if -F "#{@pane-is-vim}" 'send-keys M-l' 'resize-pane -R 3'
+
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if -F \"#{@pane-is-vim}\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if -F \"#{@pane-is-vim}\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -46,6 +54,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# enable OSC 52 on the tmux side
+set -g set-clipboard on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
