--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -94,6 +94,37 @@ focus_follows_mouse yes
 # map ctrl+alt+s goto_layout stack
 
 
+# smart-splits.nvim integration
+map ctrl+j neighboring_window down
+map ctrl+k neighboring_window up
+map ctrl+h neighboring_window left
+map ctrl+l neighboring_window right
+
+# Unset the mapping to pass the keys to neovim
+map --when-focus-on var:IS_NVIM ctrl+j
+map --when-focus-on var:IS_NVIM ctrl+k
+map --when-focus-on var:IS_NVIM ctrl+h
+map --when-focus-on var:IS_NVIM ctrl+l
+
+# the 3 here is the resize amount, adjust as needed
+map alt+j kitten relative_resize.py down  3
+map alt+k kitten relative_resize.py up    3
+map alt+h kitten relative_resize.py left  3
+map alt+l kitten relative_resize.py right 3
+
+map --when-focus-on var:IS_NVIM alt+j
+map --when-focus-on var:IS_NVIM alt+k
+map --when-focus-on var:IS_NVIM alt+h
+map --when-focus-on var:IS_NVIM alt+l
+
+# For linux only:
+allow_remote_control yes
+listen_on unix:@mykitty
+
+# Other unix systems:
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
+
 
 # Tab bar
 # tab bar place, top or bottom
