--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -5,9 +5,28 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'catppuccin/tmux#1.0.1'
 
-set -g @catppuccin_flavour 'macchiato' # latte, frappe, macchiato, mocha
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+# leave this unset to let applications set the window title
+set -g @catppuccin_window_default_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_status "icon"
+set -g @catppuccin_window_current_background "#{@thm_mauve}"
+# Load catppuccin
+run ~/.config/tmux/plugins/tmux/catppuccin.tmux
+# Make the status line pretty and add some modules
+set -g status-left ""
+set -g status-right-length 200
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_user}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
