tmux: fix image.nvim

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -77,5 +77,8 @@ bind % split-window -h -c "#{pane_current_path}"
 # enable OSC 52 on the tmux side
 set -g set-clipboard on
 
+# enable passthrough to make image.nvim work
+set -gq allow-passthrough on
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
