--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,11 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
+# Set prefix to Ctrl-Space
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
