--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -8,7 +8,9 @@ bind C-a send-prefix
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'catppuccin/tmux#1.0.1'
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
@@ -36,9 +38,8 @@ set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 ### Tokyo Night Theme configuration
 set -g @theme_variation 'moon'
-set -g @theme_left_separator ''
-set -g @theme_right_separator ''
-set -g @theme_plugins 'datetime,weather,playerctl,yay'
+set -g @theme_plugins 'datetime'
+set -g @theme_plugin_datetime_format '%Y-%m-%d %H:%M'
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
