refactor(kitty): redo kitty config from scratch

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,148 +1,46 @@
-# Catppuccin-Macchiato
-include ./themes/macchiato.conf
+# Font settings
+font_family      JetBrainsMono Nerd Font
+bold_font       auto
+italic_font     Maple Mono NF Italic
+bold_italic_font Maple Mono NF Bold Italic
+font_size       15
+adjust_line_height 110%
+
+# Platform-specific font sizes
+env PLATFORM=uname
+if not ${PLATFORM} = "Darwin"
+    font_size 12
+else
+    font_size 15
+endif
+
+# Color scheme
+include ./themes/tokyonight_moon.conf
 # background_opacity 1.0
+# dynamic_background_opacity no
 
-
-# Fonts
-font_family      FiraCode Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-
-font_size 15.0
-
-# Window layout
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
-enabled_layouts tall:bias=70;full_size=1;mirrored=false
-
-#: The width of window borders. Can be either in pixels (px) or pts
-#: (pt). Values in pts will be rounded to the nearest number of pixels
-#: based on screen resolution. If not specified, the unit is assumed
-#: to be pts. Note that borders are displayed only when more than one
-#: window is visible. They are meant to separate multiple windows.
-# window_border_width 0.5pt
-
-#: The window margin (in pts) (blank area outside the border). A
-#: single value sets all four sides. Two values set the vertical and
-#: horizontal sides. Three values set top, horizontal and bottom. Four
-#: values set top, right, bottom and left.
-# window_margin_width 0
-
-#: The window padding (in pts) (blank area between the text and the
-#: window border). A single value sets all four sides. Two values set
-#: the vertical and horizontal sides. Three values set top, horizontal
-#: and bottom. Four values set top, right, bottom and left.
-# window_padding_width 0
-
-
-
-# Mouse
-#: Hide mouse cursor after the specified number of seconds of the
-#: mouse not being used. Set to zero to disable mouse cursor hiding.
-#: Set to a negative value to hide the mouse cursor immediately when
-#: typing text.
-mouse_hide_wait 1.0
-
-#: Copy to clipboard or a private buffer on select. With this set to
-#: clipboard, selecting text with the mouse will cause the text to be
-#: copied to clipboard. Useful on platforms such as macOS that do not
-#: have the concept of primary selection. You can instead specify a
-#: name such as a1 to copy to a private kitty buffer.
-copy_on_select clipboard
-
-#: Set the active window to the window under the mouse when moving the
-#: mouse around.
-focus_follows_mouse yes
-
-
-
-# Terminal ell
-#: The audio bell. Useful to disable it in environments that require
-#: silence.
-# enable_audio_bell yes
-
-#: The visual bell duration (in seconds). Flash the screen when a bell
-#: occurs for the specified number of seconds. Set to zero to disable.
-# visual_bell_duration 0.0
-
-#: The color used by visual bell. Set to none will fall back to
-#: selection background color. If you feel that the visual bell is too
-#: bright, you can set it to a darker color.
-# visual_bell_color none
-
-
-
-# Advanced
-#: The terminal based text editor (such as vim or nano) to use when
-#: editing the kitty config file or similar tasks.
-# editor .
-
-#: Allow other programs to control kitty. If you turn this on, other
-#: programs can control all aspects of kitty, including sending text
-#: to kitty windows, opening new windows, closing windows, reading the
-#: content of windows, etc. Note that this even works over SSH
-#: connections.
-# allow_remote_control no
-
-
-
-# Keyboard mappings
-# map ctrl+shift+z toggle_layout tall
-# map ctrl+alt+t goto_layout tall
-# map ctrl+alt+s goto_layout stack
-
-
-# smart-splits.nvim integration
-map ctrl+j neighboring_window down
-map ctrl+k neighboring_window up
-map ctrl+h neighboring_window left
-map ctrl+l neighboring_window right
-
-# Unset the mapping to pass the keys to neovim
-map --when-focus-on var:IS_NVIM ctrl+j
-map --when-focus-on var:IS_NVIM ctrl+k
-map --when-focus-on var:IS_NVIM ctrl+h
-map --when-focus-on var:IS_NVIM ctrl+l
-
-# the 3 here is the resize amount, adjust as needed
-map alt+j kitten relative_resize.py down  3
-map alt+k kitten relative_resize.py up    3
-map alt+h kitten relative_resize.py left  3
-map alt+l kitten relative_resize.py right 3
-
-map --when-focus-on var:IS_NVIM alt+j
-map --when-focus-on var:IS_NVIM alt+k
-map --when-focus-on var:IS_NVIM alt+h
-map --when-focus-on var:IS_NVIM alt+l
-
-# For linux only:
-allow_remote_control yes
-listen_on unix:@mykitty
-
-# Other unix systems:
-allow_remote_control yes
-listen_on unix:/tmp/mykitty
-
+# Window settings
+# initial_window_width  120c
+# initial_window_height 30c
+scrollback_lines 5000
+# hide_window_decorations no
+# window_padding_width 2
 
 # Tab bar
-# tab bar place, top or bottom
-tab_bar_edge top
+tab_bar_style powerline
+tab_powerline_style angled
 
-#: The margin to the left and right of the tab bar (in pts).
-# tab_bar_margin_width 0.0
+# Advanced
+copy_on_select yes
+strip_trailing_spaces smart
+enable_audio_bell no
+mouse_hide_wait 0
 
-#: The margin above and below the tab bar (in pts). The first number
-#: is the margin between the edge of the OS Window and the tab bar.
-#: The second number is the margin between the tab bar and the
-#: contents of the current tab.
-# tab_bar_margin_height 0.0 0.0
+# Clipboard integration
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
 
-#: fade, slant, separator, powerline, custom, hidden
-tab_bar_style separator
-
-tab_bar_align left
-
-tab_separator " ┇ "
-
+# OS Specifics
+macos_titlebar_color background
+macos_quit_when_last_window_closed yes
+macos_option_as_alt no
