fix(git): use correct mail

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Tony Fischer (tku137)
-	email = tonyfischer@mailbox.org
+	email = tku137@mailbox.org
 [core]
 	excludesfile = /Users/tku137/.gitignore_global
 [alias]
