feat(starship): container detector not for SSH connections

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -182,6 +182,20 @@ symbol = " "
 [zig]
 symbol = " "
 
+# Disable native container detector
+[container]
+disabled = true
+
+# Detect if in container but NOT via SSH
+[custom.real_container]
+when = 'test -f /run/.containerenv && [ -z "$SSH_CONNECTION" ]'
+command = '''
+  name=$(cat /run/systemd/container 2>/dev/null || echo container)
+  printf "⬢ [%s]" "$name"
+'''
+format = "[$output]($style) "
+style = "bold red dimmed"
+
 [custom.git_scope]
 disabled = true
 command = '''
