refactor(tmux): dont use git modules, automatic tpm installation

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+# TPM and other runtime clones
+tmux/.config/tmux/plugins/
+alacritty/.config/alacritty/catppuccin/
