--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -45,5 +45,9 @@ set -g set-clipboard on
 # enable passthrough to make image.nvim work
 set -gq allow-passthrough on
 
+# automatic TPM install
+if 'test ! -d ~/.config/tmux/plugins/tpm' \
+  'run "git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins"'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
