--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -45,6 +45,10 @@ set -g set-clipboard on
 # enable passthrough to make image.nvim work
 set -gq allow-passthrough on
 
+# let tmux know your outer terminal supports features
+set -as terminal-features ",*:RGB:usstyle:hyperlinks"
+set -g default-terminal "tmux-256color"
+
 # automatic TPM install
 if 'test ! -d ~/.config/tmux/plugins/tpm' \
   'run "git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins"'
