--- a/amethyst/.amethyst.yml
+++ b/amethyst/.amethyst.yml
@@ -1,9 +1,9 @@
-# Default settings for amethyst
+# Default settings for Amethyst
 # Repo: `https://github.com/ianyh/Amethyst`
 #
 # Note due to issue 1419 (https://github.com/ianyh/Amethyst/issues/1419) some
 # config values may conflict and not work if they are the same as the default
-# values for amathyst. You can see these values on github at
+# values for Amethyst. You can see these values on GitHub at
 # https://github.com/ianyh/Amethyst/blob/development/Amethyst/default.amethyst
 # If you're experiencing conflicts and the settings are the same as the default,
 # comment out the commands in this file.
@@ -19,8 +19,8 @@ layouts:
   - fullscreen
   # - tall-right
   - wide
-  - two-pane
-  - middle-wide
+  # - two-pane
+  # - middle-wide
   # - 3column-left
   # - middle-wide # The legacy name of "3column-middle"
   # - 3column-right
@@ -29,7 +29,7 @@ layouts:
   - column
   # - row
   # - floating
-  - widescreen-tall
+  # - widescreen-tall
   # - widescreen-tall-right
   # - bsp
 
@@ -83,12 +83,12 @@ expand-main:
 # Increase the number of windows in the main pane. Note that not all layouts respond to this command.
 increase-main:
   mod: mod1
-  key: ','
+  key: ","
 
 # Decrease the number of windows in the main pane. Note that not all layouts respond to this command.
 decrease-main:
   mod: mod1
-  key: '.'
+  key: "."
 
 # General purpose command for custom layouts. Functionality is layout-dependent.
 # command1:
@@ -214,7 +214,7 @@ display-current-layout:
 
 # Turn on or off tiling entirely.
 toggle-tiling:
-  mod: mod1
+  mod: mod2
   key: t
 
 # Rerun the current layout's algorithm.
@@ -235,7 +235,7 @@ relaunch-amethyst:
 # disable screen padding on builtin display
 disable-padding-on-builtin-display: false
 
-# Boolean flag for whether or not to add margins betwen windows (default false).
+# Boolean flag for whether or not to add margins between windows (default false).
 window-margins: false
 
 # Boolean flag for whether or not to set window margins if there is only one window on the screen, assuming window margins are enabled (default false).
@@ -258,55 +258,16 @@ window-minimum-height: 0
 window-minimum-width: 0
 
 # List of bundle identifiers for applications to either be automatically floating or automatically tiled based on floating-is-blacklist (default []).
-floating:
-  - com.1password.1password
-  - com.macitbetter.betterzip
-  - com.apple.calculator
-  - com.apple.iCal
-  - com.coteditor.CotEditor
-  - com.daisydiskapp.DaisyDiskStandAlone
-  - com.hnc.Discord
-  - com.docker.docker
-  - org.mozilla.firefox
-  - com.apple.freeform
-  - com.apple.FontBook
-  - com.google.Chrome
-  - com.apple.Home
-  - com.googlecode.iterm2
-  - net.kovidgoyal.kitty
-  - org.libreoffice.script
-  - com.apple.mail
-  - com.apple.Maps
-  - org.gnome.meld
-  - com.apple.MobileSMS
-  - com.apple.Notes
-  - notion.id
-  - com.apple.iWork.Numbers
-  - com.dmitrynikolaev.numi
-  - md.obsidian
-  - app.omnivore.app
-  - com.apple.iWork.Pages
-  - com.witt-software.PDF-Squeezer
-  - com.apple.Photos
-  - com.apple.podcasts
-  - com.apple.Preview
-  - com.apple.QuickTimePlayerX
-  - com.apple.reminders
-  - com.apple.Safari
-  - com.torusknot.SourceTreeNotMAS
-  - com.tinyapp.TablePlus
-  - com.apple.TextEdit
-  - com.macromates.TextMate
-  - com.microsoft.VSCode
-  - com.vivaldi.Vivaldi
-  - com.apple.weather
-  - com.github.wez.wezterm
+floating: []
 
 # Boolean flag determining behavior of the floating list. true if the applications should be floating and all others tiled. false if the applications should be tiled and all others floating (default true).
-floating-is-blacklist: false
+floating-is-blacklist: true
 
 # true if screen frames should exclude the status bar. false if the screen frames should include the status bar (default false).
 ignore-menu-bar: false
+
+# true if menu bar icon should be hidden (default false).
+hide-menu-bar-icon: false
 
 # true if windows smaller than a 500px square should be floating by default (default true)
 float-small-windows: true
