feat(amethyst): have basic config

--- a/amethyst/.amethyst.yml
+++ b/amethyst/.amethyst.yml
@@ -15,18 +15,18 @@
 
 # layouts - Ordered list of layouts to use by layout key (default tall, wide, fullscreen, and column).
 layouts:
-  - tall
   - fullscreen
+  - two-pane
+  - tall
   # - tall-right
-  - wide
-  # - two-pane
+  # - wide
   # - middle-wide
   # - 3column-left
   # - middle-wide # The legacy name of "3column-middle"
   # - 3column-right
   # - 4column-left
   # - 4column-right
-  - column
+  # - column
   # - row
   # - floating
   # - widescreen-tall
@@ -249,7 +249,7 @@ window-margin-size: 0
 
 # The max number of windows that may be visible on a screen at one time before
 # additional windows are minimized. A value of 0 disables the feature.
-window-max-count: 0
+window-max-count: 4
 
 # The smallest height that a window can be sized to regardless of its layout frame (in px, default 0).
 window-minimum-height: 0
@@ -258,7 +258,16 @@ window-minimum-height: 0
 window-minimum-width: 0
 
 # List of bundle identifiers for applications to either be automatically floating or automatically tiled based on floating-is-blacklist (default []).
-floating: []
+floating:
+  - com.apple.Preview
+  - com.apple.QuickTimePlayerX
+  - com.apple.systempreferences
+  - com.apple.SystemSettings
+  - com.apple.Music
+  - com.apple.ScreenCaptureUI
+  - com.1password.1password
+  # - net.whatsapp.WhatsApp
+  # - org.whispersystems.signal-desktop
 
 # Boolean flag determining behavior of the floating list. true if the applications should be floating and all others tiled. false if the applications should be tiled and all others floating (default true).
 floating-is-blacklist: true
