fix(tmux): tmux-tokyo-night is now tmux-powerkit; pin version
A bunch of fixes needed to be done to make it work.

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,31 +6,14 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-logging'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
-
-# Tokyo Night Theme configuration
-set -g @theme_variation 'moon'
-set -g @theme_plugins 'datetime'
-set -g @theme_plugin_datetime_format '%Y-%m-%d %H:%M'
-
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Enable keymap passthrough
-set-window-option -g allow-passthrough on
-
-# set vi-mode
+# Set vi-mode
 set-window-option -g mode-keys vi
-# keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
@@ -42,16 +25,33 @@ bind % split-window -h -c "#{pane_current_path}"
 # enable OSC 52 on the tmux side
 set -g set-clipboard on
 
-# enable passthrough to make image.nvim work
+# Enable passthrough to make image.nvim work
 set -gq allow-passthrough on
 
-# let tmux know your outer terminal supports features
-set -as terminal-features ",*:RGB:usstyle:hyperlinks"
-set -g default-terminal "tmux-256color"
+# Enable keymap passthrough
+set-window-option -g allow-passthrough on
 
-# automatic TPM install
-if 'test ! -d ~/.config/tmux/plugins/tpm' \
-  'run "git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins"'
+# Let tmux know your outer terminal supports features
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -as terminal-features ",*:RGB:usstyle:hyperlinks"
+
+# Tokyo Night Theme configuration
+set -g @theme_variation 'moon'
+set -g @theme_plugins 'loadavg,datetime'
+set -g @theme_plugin_datetime_format '%a %d. %b %H:%M'
+
+# Automatic TPM install
+if-shell 'test ! -d ~/.tmux/plugins/tpm' \
+  'run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins"'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'fabioluciano/tmux-powerkit#v2.16.1'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
