--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -37,9 +37,11 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -as terminal-features ",*:RGB:usstyle:hyperlinks"
 
 # Tokyo Night Theme configuration
-set -g @theme_variation 'moon'
-set -g @theme_plugins 'loadavg,datetime'
-set -g @theme_plugin_datetime_format '%a %d. %b %H:%M'
+set -g @powerkit_theme 'tokyo-night'
+set -g @powerkit_theme_variant 'night'
+set -g @powerkit_plugins 'loadavg,datetime'
+set -g @powerkit_separator_style 'normal'
+set -g @powerkit_plugin_datetime_format '%a %d. %b %H:%M'
 
 # Automatic TPM install
 if-shell 'test ! -d ~/.tmux/plugins/tpm' \
@@ -51,7 +53,7 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'fabioluciano/tmux-powerkit#v2.16.1'
+set -g @plugin 'fabioluciano/tmux-powerkit'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
