--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ fish/.config/fish/*
 !fish/.config/fish/config.fish
 !fish/.config/fish/fish_plugins
 
+# Un-ignore themes
+!fish/.config/fish/themes
+
 # Un-ignore the functions directory
 !fish/.config/fish/functions/
 
