--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -41,7 +41,10 @@ set -g @powerkit_theme 'tokyo-night'
 set -g @powerkit_theme_variant 'night'
 set -g @powerkit_plugins 'ssh,cloud,loadavg,datetime'
 set -g @powerkit_separator_style 'normal'
+set -g @powerkit_edge_separator_style 'normal'
 set -g @powerkit_plugin_datetime_format '%a %d. %b %H:%M'
+set -g @powerkit_theme_selector_key "M-t"
+set -g @powerkit_reload_config_key "M-r"
 
 # Automatic TPM install
 if-shell 'test ! -d ~/.tmux/plugins/tpm' \
