fix(tmux): newly clashing keybind

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -38,12 +38,12 @@ set -as terminal-features ",*:RGB:usstyle:hyperlinks"
 
 # Tokyo Night Theme configuration
 set -g @powerkit_theme 'tokyo-night'
-set -g @powerkit_theme_variant 'night'
+set -g @powerkit_theme_variant 'storm'
 set -g @powerkit_plugins 'ssh,cloud,loadavg,datetime'
 set -g @powerkit_separator_style 'normal'
 set -g @powerkit_edge_separator_style 'normal'
 set -g @powerkit_plugin_datetime_format '%a %d. %b %H:%M'
-set -g @powerkit_show_options_key "M-o"
+set -g @powerkit_show_options_key "M-e"
 set -g @powerkit_show_keybindings_key "M-k"
 set -g @powerkit_theme_selector_key "M-t"
 set -g @powerkit_reload_config_key "M-r"
