feat(tmux): remove load_avg

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -39,7 +39,7 @@ set -as terminal-features ",*:RGB:usstyle:hyperlinks"
 # Tokyo Night Theme configuration
 set -g @powerkit_theme 'tokyo-night'
 set -g @powerkit_theme_variant 'storm'
-set -g @powerkit_plugins 'ssh,cloud,loadavg,datetime'
+set -g @powerkit_plugins 'ssh,cloud,datetime'
 set -g @powerkit_separator_style 'normal'
 set -g @powerkit_edge_separator_style 'normal'
 set -g @powerkit_plugin_datetime_format '%a %d. %b %H:%M'
